qtxmlpatterns-opensource-src (5.12.3-1) UNRELEASED; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Add Build-Depends-Package field to debian/libqt5xmlpatterns5.symbols.

 -- Scarlett Moore <sgmoore@kde.org>  Sat, 13 Apr 2019 07:50:52 -0700

qtxmlpatterns-opensource-src (5.12.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Build-depend on qtdeclarative5-private-dev and qml-module-qtquick2,
    needed for xmllistmodel module and its tests.
  * Add qml-module-qtquick-xmllistmodel package, moved from qtdeclarative.
  * Add Qt_5.12 version tag to debian/libqt5xmlpatterns5.symbols.
  * Update Homepage URL.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 23 Mar 2019 14:34:14 +0300

qtxmlpatterns-opensource-src (5.11.3-2) unstable; urgency=medium

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Dec 2018 16:09:53 -0300

qtxmlpatterns-opensource-src (5.11.3-1) experimental; urgency=medium

  * New upstream release.
    - Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 05 Dec 2018 21:14:39 -0300

qtxmlpatterns-opensource-src (5.11.2-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 15 Oct 2018 21:08:03 +0300

qtxmlpatterns-opensource-src (5.11.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.11.2.
  * Re-enable the tests. They are passing on all release architectures.
  * Bump Standards-Version to 4.2.1, no changes needed.
