@@ -1,0 +1,3 @@
+usr/include/*/qt5/QtXmlPatterns/5.*
+usr/lib/*/libQt5XmlPatterns.la
+usr/lib/*/qt5/mkspecs/modules/qt_lib_xmlpatterns_private.pri
